--- a/gradle.properties
+++ b/gradle.properties
@@ -1,3 +1,4 @@
 org.gradle.daemon=true
+org.gradle.java.home=C:/Program Files/Java/jdk1.8.0_77
 org.gradle.jvmargs=-Xms128m -Xmx8192m
 org.gradle.configureondemand=false
